k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: budget-app
  labels:
    name: budget-app
